Added files via upload

--- a/pay.css
+++ b/pay.css
@@ -17,8 +17,8 @@ ul, ol { list-style-type:none; }
 		width:370px;
 		height:80px;
 		margin:0 auto;
-		background-color:#9F9A9A;
-		border-bottom: 2px solid #D3D3D3;
+		background-color:#808080;
+		border-bottom: 2px solid #808080;
 		
 }
 .Help{
